Add a dummy settings dialog

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" role="heading">
   <span>Samap</span>
   <span class="heading-spacer"></span>
-  <button mat-icon-button>
+  <button mat-icon-button (click)="openSettingsDialog()">
     <mat-icon class="heading-icon">more_horiz</mat-icon>
   </button>
 </mat-toolbar>
