--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,12 @@
 <h2 mat-dialog-title>Settgings</h2>
-<mat-dialog-content>Contents</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close color="secondary">Cancel</button>
-  <button mat-button mat-dialog-close color="primary">Save</button>
-</mat-dialog-actions>
+<form [formGroup]="settingsForm" (ngSubmit)="onSubmit()">
+  <mat-dialog-content>
+    <mat-form-field>
+      <input matInput type="number" placeholder="Distance (m)" formControlName="distance">
+    </mat-form-field>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close color="secondary">Cancel</button>
+    <button type="submit" mat-button color="primary" [disabled]="settingsForm.pristine">Save</button>
+  </mat-dialog-actions>
+</form>
