--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -2,6 +2,12 @@
   height: 100%;
 }
 
+.sidenav-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 .sidenav {
   width: 200px;
 }
