--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container fullscreen class="sidenav-container">
   <mat-sidenav
     #drawer
     class="sidenav"
@@ -13,7 +13,7 @@
       <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content class="sidenav-content">
     <mat-toolbar color="primary">
       <button
         type="button"
@@ -25,6 +25,6 @@
       </button>
       <span>samap-ui</span>
     </mat-toolbar>
-    <!-- Add Content Here -->
+    <app-map></app-map>
   </mat-sidenav-content>
 </mat-sidenav-container>
