--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -10,9 +10,30 @@
 
 .sidenav {
   width: 300px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .mat-toolbar.mat-primary {
   position: sticky;
   top: 0;
+}
+
+.settings-content {
+  flex: 1;
+}
+
+.travel-mode-toggle-group {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+}
+
+.travel-mode-toggle {
+  flex: 1;
+}
+
+.settings-item {
+  width: 100%;
 }
