--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
     <mat-card class="settings-content">
       <mat-card-content>
         <section>
-          <mat-button-toggle-group class="travel-mode-toggle-group settings-item">
+          <mat-button-toggle-group class="travel-mode-toggle-group settings-item" [value]="currentTravelMode" (change)="changeTravelMode($event.value)">
             <mat-button-toggle class="travel-mode-toggle" value="car">
               <mat-icon>directions_car</mat-icon>
             </mat-button-toggle>
@@ -19,7 +19,7 @@
 
         <section>
           <mat-form-field class="settings-item">
-            <input matInput [formControl]="travelTimeControl" type="number" min="10" max="120" placeholder="Travel time">
+            <input matInput type="number" min="10" max="120" placeholder="Travel time" [formControl]="travelTimeControl" value="10">
             <span matSuffix>min</span>
             <mat-error *ngIf="travelTimeControl.errors">
               Please enter a value between 10 and 120
