--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>samap-ui</span>
+      <span>SAMAP</span>
     </mat-toolbar>
     <app-map></app-map>
   </mat-sidenav-content>
