--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,6 +13,10 @@
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
       <span>SAMAP</span>
+      <span class="content-toolbar-spacer"></span>
+      <button type="button" aria-label="Clear map" mat-icon-button (click)="clearMap()">
+        <mat-icon aria-label="Clear map">delete_forever</mat-icon>
+      </button>
     </mat-toolbar>
     <app-map></app-map>
   </mat-sidenav-content>
