Update clear map icon

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
       <span>SAMAP</span>
       <span class="content-toolbar-spacer"></span>
       <button type="button" aria-label="Clear map" mat-icon-button (click)="clearMap()">
-        <mat-icon aria-label="Clear map">delete_forever</mat-icon>
+        <mat-icon aria-label="Clear map">layers_clear</mat-icon>
       </button>
     </mat-toolbar>
     <app-map></app-map>
