Add a color selector in settings
The color selector will be used to select the colors for service areas

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -31,3 +31,14 @@
     </mat-error>
   </mat-form-field>
 </section>
+
+<section>
+  <h3>Color</h3>
+  <mcc-color-picker
+    [selectedColor]="currentColor"
+    usedSizeColors="8"
+    hideButtons
+    hideTransparentUsedColors
+    (change)="changeColor($event)"
+  ></mcc-color-picker>
+</section>
