--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,15 +1,15 @@
 <section>
   <h3>Basemaps</h3>
-  <mat-radio-group class="basemap-radio-group" [value]="currentBasemap" (change)="changeBasemap($event.value)">
-    <mat-radio-button class="basemap-radio-button" *ngFor="let basemap of basemaps" [value]="basemap[0]">
-      {{basemap[1]}}
+  <mat-radio-group class="basemap-radio-group" [value]="basemap" (change)="changeBasemap($event.value)">
+    <mat-radio-button class="basemap-radio-button" *ngFor="let item of basemaps" [value]="item[0]">
+      {{item[1]}}
     </mat-radio-button>
   </mat-radio-group>
 </section>
 
 <section>
   <h3>Travel by</h3>
-  <mat-button-toggle-group class="travel-mode-toggle-group settings-item" [value]="currentTravelMode" (change)="changeTravelMode($event.value)">
+  <mat-button-toggle-group class="travel-mode-toggle-group settings-item" [value]="travelMode" (change)="changeTravelMode($event.value)">
     <mat-button-toggle class="travel-mode-toggle" value="car">
       <mat-icon>directions_car</mat-icon>
     </mat-button-toggle>
@@ -35,10 +35,10 @@
 <section>
   <h3>Color</h3>
   <mcc-color-picker
-    [selectedColor]="currentColor"
+    [selectedColor]="serviceAreaColor"
     usedSizeColors="8"
     hideButtons
     hideTransparentUsedColors
-    (change)="changeColor($event)"
+    (change)="changeServiceAreaColor($event)"
   ></mcc-color-picker>
 </section>
