--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container fullscreen class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport="true" [attr.role]="dialog" [mode]="over">
+  <mat-sidenav #drawer class="sidenav" fixedInViewport="true" role="dialog" mode="over">
     <mat-toolbar color="primary">Settings</mat-toolbar>
     <mat-card class="settings-content">
       <mat-card-content>
